--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body style="background-color:#f8f8f8">
   <center><h1> Cámara </h1></center>
   <div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Fznb109VRuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/Fznb109VRuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
   </div>
 <script src="main.js"></script>
 </body>
-</html>>
+</html>
